// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/CheckboxGroup Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:rh:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:ri:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:ri:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:rk:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:rk:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:rm:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:rm:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:rg:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup LegendWithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:rp:"
            class="_srOnly_u2f5e_39"
    >
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:rq:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:rq:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:rs:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:rs:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:ru:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:ru:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup LegendWithMarkupAndRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r11:"
            class="_srOnly_u2f5e_39"
    >
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="_legend_u2f5e_15 _legendWithMarkup_required_u2f5e_23"
         aria-hidden="true"
    >
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34">
        Dette er en Heading i legend
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r12:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r12:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r14:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r14:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r16:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r16:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r10:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlid"
            data-testid="123ID"
            class="_fieldset_u2f5e_5 dummyClassname"
            lang="nb"
            form="123form"
            data-has-spacing="true"
  >
    <legend id="legendId-:r9:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:ra:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:ra:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:rc:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:rc:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:re:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:re:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r8:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r3d:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28 dummyClassname"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r3d:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3e:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3e:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_5szkl_17   dummyClassname">
      beskrivelse
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r3f:"
               class="_input_1vcnk_20"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               type="checkbox"
        >
        <label for="checkboxInputId-:r3f:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43 _labelCheckbox_error_1vcnk_63">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r3h:"
               class="_input_1vcnk_20"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               type="checkbox"
        >
        <label for="checkboxInputId-:r3h:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43 _labelCheckbox_error_1vcnk_63">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r3j:"
               class="_input_1vcnk_20"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               type="checkbox"
        >
        <label for="checkboxInputId-:r3j:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43 _labelCheckbox_error_1vcnk_63">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r3c:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1ycvu_15 _errorMessage_1e92u_5 dummyClassname">
          <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1ycvu_32">
            Velg minst ett av alternativene
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2s:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_description_5szkl_17">
      Vi trenger å vite om du har barn.
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2t:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2t:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2v:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2v:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r31:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r31:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r2r:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            disabled
            data-has-spacing="true"
  >
    <legend id="legendId-:r1h:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1i:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1i:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1k:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1k:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1m:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1m:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r1g:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDisabledAndChecked smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            disabled
            data-has-spacing="true"
  >
    <legend id="legendId-:r1p:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1q:"
               class="_input_1vcnk_20"
               type="checkbox"
               checked
        >
        <label for="checkboxInputId-:r1q:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1s:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1s:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1u:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1u:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r1o:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithError play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r29:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2a:"
               class="_input_1vcnk_20"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2a:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43 _labelCheckbox_error_1vcnk_63">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2c:"
               class="_input_1vcnk_20"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2c:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43 _labelCheckbox_error_1vcnk_63">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2e:"
               class="_input_1vcnk_20"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2e:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43 _labelCheckbox_error_1vcnk_63">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r28:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="_errorMessage_1ycvu_15 _errorMessage_1e92u_5">
          <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _errorMessageIcon_1ycvu_28"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
            </path>
          </svg>
          <p class="_errorMessageText_1ycvu_32">
            Velg minst ett av alternativene
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r34:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r34:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r35:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r35:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r36:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r36:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r38:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r38:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r3a:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r3a:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r33:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHelptext play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r2i:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15   _legendNoMarginBottom_u2f5e_28"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_5szkl_27"
            data-brightness="default"
            type="button"
            aria-describedby="legendId-:r2i:"
            aria-expanded="true"
    >
      <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_helpBox_5szkl_32">
      <div class="_helpBoxText_5szkl_45">
        Vi trenger å vite om du har barn.
      </div>
      <button class="_button_19ayz_1 _button_small_19ayz_38  _helpBoxCloseButton_5szkl_52"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_o38m2_2 _systemIcon_small_o38m2_5 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2q:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2q:">
            Lukk
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2k:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2k:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2m:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2m:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2o:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2o:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r2h:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r19:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15  _srOnly_u2f5e_39"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32 _contentContainerNoMarginTop_u2f5e_35">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1a:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1a:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1c:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1c:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r1e:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r1e:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r18:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r1:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r2:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r2:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r4:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r4:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r6:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r6:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_u2f5e_5"
            data-has-spacing="true"
  >
    <legend id="legendId-:r21:"
            class="_srOnly_u2f5e_39"
    >
      Velg det som passer deg
    </legend>
    <div class="_legend_u2f5e_15 _legend_required_u2f5e_23"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="_contentContainer_u2f5e_32">
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r22:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r22:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r24:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r24:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="_container_1vcnk_5 _containerSpacingBottom_1vcnk_14">
        <input id="checkboxInputId-:r26:"
               class="_input_1vcnk_20"
               type="checkbox"
        >
        <label for="checkboxInputId-:r26:"
               class="_label_1vcnk_32"
        >
          <span class="_labelCheckbox_1vcnk_43">
            <span class="_labelCheckboxCheck_1vcnk_53">
            </span>
          </span>
          <span class="_labelContent_1vcnk_66">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r20:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
